# gunicorn-fastapi-cli

./: .gitignore  Makefile  cli.py  config.yaml  pyproject.toml  requirements.txt  run.sh  server.py  utils.py
.github/workflows/: master_extract-api-poc(test).yml
src/fast_guni_app/: api.py  cli.py  config.py  logging.py  main.py  server.py  utils.py
src/fast_guni_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
