[project]
name = "fast_guni"
version = "0.0.1"
authors = [{name = "Nemanja Radojkovic, email = <www.linkedin.com/in/radojkovic>"}]
dependencies = [
    "PyYAML",
    "gunicorn",
    "uvicorn",
    "fastapi",
    "typer",
    "invoke",
    "rich",
    "psutil",
]

[project.optional-dependencies]
dev = [
    "pip-tools",
]

[project.scripts]
fg-app = "fast_guni_app.cli:cli"